syntax = "proto3";
package auth;

import "common/common.proto";

option go_package = "go-gateway-service/client/gen-proto/auth";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

// Register

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  int64 status = 1;
  string error = 2;
}

// Login

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  message Data {
    string access_token = 1;
    string refresh_token = 2;
    AuthResponse user = 3;
  }

  bool success = 1;
  oneof response {
    Data data = 2;
    common.Error error = 3;
  }
}

// Validate

message ValidateRequest { string token = 1; }

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  int64 userId = 3;
}
message AuthResponse {
  string        user_id = 1;
  string        username = 2;
  string        email = 3;
  repeated string roles = 5;
  string        first_name = 6;
  string        last_name = 7;
}